[package]
name = "ironlobe"
version = "0.2.0"
authors = ["Jack McPherson <jack@jmcph4.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
eq-float = "0.1.0"
eyre = "0.6.12"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[[example]]
name = "basic"

